Added integration tests for CartControllerV1 and applied Copilot suggestions